--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,6 @@ html {
 }
 
 body {
-    background-color: #202426;
     padding: 0;
     margin: 0;
 }
@@ -16,7 +15,7 @@ div {
 
 #mapid { 
     position:fixed;
-    width:85%;
+    width:100%;
     height:100%;
     z-index:0;
     right: 0;
@@ -28,31 +27,26 @@ div {
     justify-items: center;
     position:fixed;
     height: 100%;
-    width: 15%;
+    width: 20%;
     min-width: 130px;
     max-height: 900px;
     overflow: auto;
     left: 0;
     z-index: 1;
-    background: rgb(32,36,38);
-    background: linear-gradient(0deg, rgba(32,36,38,1) 0%, rgba(108, 115, 61,1) 100%);
-}
-
-#earthquakeupdate {
-    color:#F2F2F2;
-    background-color: #202426;
+    background-color: #4a6867;
 }
 
 #earthquakelist {
     position:fixed;
-    height: 15%;
-    width: 65%;
+    height: 20%;
+    width: 80%;
     right: 0;
-    bottom: 0;
+    top: 0;
     z-index: 1;
-    background: #202426;
+    background: #4a6867;
     overflow: auto;
     min-width: 240px;
+    -webkit-appearance: none;
 }
 
 h1 {    
@@ -65,7 +59,7 @@ h1 {
 h2 {
     font-family: 'Open Sans', sans-serif; 
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 700;
     text-align: center;
 }
 
@@ -86,8 +80,12 @@ p:hover {
 }
 
 #logo {
-    width: 80%;
-    margin: auto 0;
+    font-size: xx-large;
+}
+
+#siteName {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 input[type=text], textarea {
@@ -121,7 +119,6 @@ input[type=text], textarea {
     color: #F2F2F2;
     background: #202426;
     border-color: #202426;
-    transition: all 0.4s ease 0s;
 }
 
 #update {
